File loaded after change
Comment about lunch is added to see how github trackes changes

--- a/Module 1 - Basic Python.ipynb
+++ b/Module 1 - Basic Python.ipynb
@@ -371,6 +371,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lunch is talking too long\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('lunch is talking too long')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
